syntax = "proto3";

option go_package = "pokestocks/proto/pokemon_stock_pair";

package pokemon_stock_pair;

import "proto/common/pokemon_stock_pair.proto";

message SearchPokemonStockPairsResponse {
  repeated common.PokemonStockPair data = 1;
}
